# livekit-ai-switchboard

./: .env.example  CLAUDE.md  README.md  concept_improv.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ai_switchboard/: __init__.py  analyzer.py  config.py  context.py  events.py  metrics.py  rule.py  signal.py  switchboard.py
docs/plans/: 2026-03-17-bottlenecks-design.md
examples/: basic.py  custom_rules.py  demo_agent_session.py  demo_events.py  demo_routing.py  demo_rules.py  openrouter_anthropic.py  three_tier.py  with_config.py
tests/: conftest.py  test_analyzer.py  test_integration.py  test_livekit_session.py  test_metrics.py  test_rules.py  test_switchboard.py
