[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-ai-switchboard"
version = "0.1.0"
description = "Intelligent LLM routing for LiveKit voice agents"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
    "livekit-agents>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_switchboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
